phancie-lang/tests/loop/loop_error_snapshot.txt
ERROR: Can't pass ByIn argument to a param with MutMode
        let mut a = 0;
                    ^
